; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_fstab.c_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_fstab.c_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDERR_FILENO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"fstab: \00", align 1
@path_fstab = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c":\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%d: \00", align 1
@LineNo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @error(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [30 x i8], align 16
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @STDERR_FILENO, align 4
  %6 = call i32 @_write(i32 %5, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 7)
  %7 = load i32, i32* @STDERR_FILENO, align 4
  %8 = load i8*, i8** @path_fstab, align 8
  %9 = load i8*, i8** @path_fstab, align 8
  %10 = call i32 @strlen(i8* %9)
  %11 = call i32 @_write(i32 %7, i8* %8, i32 %10)
  %12 = load i32, i32* @STDERR_FILENO, align 4
  %13 = call i32 @_write(i32 %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %14 = getelementptr inbounds [30 x i8], [30 x i8]* %4, i64 0, i64 0
  %15 = load i32, i32* @LineNo, align 4
  %16 = call i32 @sprintf(i8* %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* @STDERR_FILENO, align 4
  %18 = getelementptr inbounds [30 x i8], [30 x i8]* %4, i64 0, i64 0
  %19 = getelementptr inbounds [30 x i8], [30 x i8]* %4, i64 0, i64 0
  %20 = call i32 @strlen(i8* %19)
  %21 = call i32 @_write(i32 %17, i8* %18, i32 %20)
  %22 = load i32, i32* %2, align 4
  %23 = call i8* @strerror(i32 %22)
  store i8* %23, i8** %3, align 8
  %24 = load i32, i32* @STDERR_FILENO, align 4
  %25 = load i8*, i8** %3, align 8
  %26 = load i8*, i8** %3, align 8
  %27 = call i32 @strlen(i8* %26)
  %28 = call i32 @_write(i32 %24, i8* %25, i32 %27)
  %29 = load i32, i32* @STDERR_FILENO, align 4
  %30 = call i32 @_write(i32 %29, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 1)
  ret void
}

declare dso_local i32 @_write(i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i8* @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
